--- a/recipeStore/src/main/resources/application.properties
+++ b/recipeStore/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=1001
 spring.datasource.name=book
 spring.datasource.url=jdbc:mysql://localhost:3306/recipe?ServerTimezone=IST
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Subray#1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
